force-app/main/default/objects/Nombre_de_vue__c/Nombre_de_vue__c.object-meta.xml
<CustomObject>
    <label>Nombre de vues</label>
    <nameField>
        <displayFormat>VUE-{0000}</displayFormat>
        <label>Nombre de vue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nombre de vues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>