force-app/main/default/objects/Nombre_de_vue__c/fields/Date_de_vue__c.field-meta.xml
<CustomField>
    <fullName>Date_de_vue__c</fullName>
    <label>Date de vue</label>
    <type>Date</type>
</CustomField>