force-app/main/default/objects/Nombre_de_vue__c/fields/Info_Couleur__c.field-meta.xml
<CustomField>
    <fullName>Info_Couleur__c</fullName>
    <label>Info Couleur</label>
    <referenceTo>InfoCouleur__c</referenceTo>
    <relationshipName>TEST_nombre_de_vue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>