force-app/main/default/objects/Nombre_de_vue__c/fields/Nombre_de_vue__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_vue__c</fullName>
    <label>Nombre de vues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>