force-app/main/default/objects/Nombre_de_vue__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TEST_nombre_de_vue</relationshipName>
    <type>Lookup</type>
</CustomField>