force-app/main/default/objects/Nombre_de_vue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>